tests/examples/fail/sorts/sort_checking_basic.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s

assert forall x:bool. (forall y:s. y = x) & x
